--- a/route-planner-server/src/main/resources/application.properties
+++ b/route-planner-server/src/main/resources/application.properties
@@ -21,3 +21,4 @@ spring.jpa.hibernate.ddl-auto: create-drop
 spring.jpa.defer-datasource-initialization: true
 spring.sql.init.mode: always
 logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=DEBUG
+spring.devtools.restart.enabled=false
