--- a/route-planner-server/src/main/resources/application.properties
+++ b/route-planner-server/src/main/resources/application.properties
@@ -16,9 +16,13 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 spring.jpa.show-sql: true
-logging.level.org.hibernate.SQL: DEBUG
+#spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto: create-drop
 spring.jpa.defer-datasource-initialization: true
 spring.sql.init.mode: always
+spring.jpa.open-in-view=false
 logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=DEBUG
-spring.devtools.restart.enabled=false
+logging.level.org.hibernate.SQL: DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+#spring.devtools.restart.enabled=false
